# VesperOS

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  converter.py  limine.cfg  linker.ld
.cargo/: config.toml
iso/boot/: kernel_minimo
isodir/boot/: kernel.elf
isodir/boot/grub/: grub.cfg
src/: branding.rs  colors.rs  main.rs  proto.rs  terminal_proto.rs  vesperfetch.rs  vga.rs
src/app/: mod.rs  vesperfetch_app.rs
src/arch/: mod.rs
src/arch/x86_64/: cpu.rs  halt.S  idt.rs  interrupts.S  interrupts.rs  keyboard.rs  mod.rs
src/boot/: multiboot2_header.S
src/shell/: command.rs  mod.rs
