[package]
name = "VesperOS"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.5.0"
# noto-sans-mono-bitmap = "0.3.1"
# Para futuro modo gráfico considera:
embedded-graphics = "0.8.1"
profont = "0.7.0"
tinybmp = "0.6.0"
heapless = "0.9.1"

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = "0.11"
spin = "0.10"
pc-keyboard = "0.8.0"


[build-dependencies]
cc = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
